tests/cancelable_workloads/cancelable_workloads.exp


Commands can be canceled


Start a find-refs which will hang:
  (After sleep find-refs still hasn't output anything)


Trigger a recheck to fix the hung find-refs
foo.js:3:14,3:16
sleep.js:3:9,3:11
sleep.js:5:2,5:4


And flow status should work
Error ----------------------------------------------------------------------------------------------------- sleep.js:5:2

Cannot cast `num` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   sleep.js:5:2
   5| (num: boolean); // error number ~> boolean
       ^^^

References:
   foo.js:3:20
   3| export const num = 123;
                         ^^^ [1]
   sleep.js:5:7
   5| (num: boolean); // error number ~> boolean
            ^^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
